# polymarket

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-prod.txt  requirements.txt  ruff.toml  run.ps1  server.py
.cursor/rules/: project.mdc
.github/workflows/: ci.yml
api/: app.py  routes.py  schemas.py
api/templates/: dashboard.html
config/: __init__.py  settings.py
db/: __init__.py  schema.sql  schema_sqlite.sql
db/migrations/: env.py
docs/: ARCHITECTURE.md  RAILWAY.md  RETENTION_TUNING.md
polymarket-webapp/: README.md  package.json
polymarket-webapp/public/: index.html  manifest.json  sw.js
polymarket-webapp/public/js/: api.js  (+1 more)
scripts/: init_local.py  load_pmxt.py  run_pipeline.py  seed_demo.py  warmup.py
services/backtester/: engine.py  main.py
services/collector/: db_writer.py  main.py  pmxt_loader.py  polymarket_client.py
services/execution_bot/: main.py  orders.py  risk.py
services/feature_store/: features.py  main.py
services/ml_module/: main.py  models.py
services/monitoring/: prometheus.yml
services/news_collector/: main.py  rss_loader.py
services/telegram_bot/: main.py
tests/: conftest.py  test_api.py  test_backtester.py  test_collector.py  test_execution_bot.py  test_features.py  test_news_collector.py  test_orders.py  test_placeholder.py  test_pmxt_loader.py  test_risk.py  test_scripts.py  test_server.py  test_settings.py
tests/integration/: test_pipeline.py
webapp/css/: app.css
webapp/js/: api.js  app.js  charts.js
(+8 files in other folders)
